--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 	<title>Mạng Văn Học</title>
 	<link rel="stylesheet" href="css/app.css">
-
     <link rel="stylesheet" type="text/css" href="css/style.css">
     <link rel="stylesheet" type="text/css" href="css/common.css">
     <link rel="stylesheet" type="text/css" href="css/article.css">
@@ -14,10 +13,11 @@
     <link rel="stylesheet" href="css/lib/angular-snap.css">
     <link rel="stylesheet" type="text/css" href="lib/medium-editor/css/medium-editor.css">
     <link rel="stylesheet" type="text/css" href="lib/medium-editor/css/themes/default.css">
+    <link rel="stylesheet" type="text/css" href="css/lib/datetimepicker.css">
     <!-- socket.io -->
     <script type="text/javascript" src="http://localhost:9000/socket.io/socket.io.js"></script>
     <!-- lib -->
-    <script type="text/javascript" src="lib/jquery.min.js"></script>
+    <script type="text/javascript" src="lib/jquery-1.11.1.min.js"></script>
 	<script type="text/javascript" src="lib/angular.min.js"></script>
     <script type="text/javascript" src="lib/angular-touch.min.js"></script>
     <script type="text/javascript" src="lib/angular-cookies.min.js"></script>
@@ -25,19 +25,28 @@
     <script type="text/javascript" src="lib/socket.js"></script>
     <script type="text/javascript" src="lib/snap.min.js"></script>
     <script type="text/javascript" src="lib/angular-snap.js"></script>
-    <script type="text/javascript" src="lib/angular-sanitize.js"></script>
     <script type="text/javascript" src="lib/medium-editor/js/medium-editor.js"></script>
     <script type="text/javascript" src="lib/angular-medium-editor.min.js"></script>
+    <script type="text/javascript" src="lib/moment.min.js"></script>
+    <script type="text/javascript" src="lib/datetimepicker.js"></script>
     <!-- app js -->
 	<script type="text/javascript" src="js/app.js"></script>
+    <!-- app directive -->
+    <script type="text/javascript" src="js/directives/keyUpDirective.js"></script>
     <!-- app service -->
     <script type="text/javascript" src="js/services/socketService.js"></script>
     <script type="text/javascript" src="js/services/sessionService.js"></script>
     <script type="text/javascript" src="js/services/loginService.js"></script>	
+    <script type="text/javascript" src="js/services/documentService.js"></script>  
+    <script type="text/javascript" src="js/services/sectionService.js"></script> 
+    <script type="text/javascript" src="js/services/readService.js"></script>
     <!-- app controller -->
 	<script type="text/javascript" src="js/controllers/loginController.js"></script>
     <script type="text/javascript" src="js/controllers/messageController.js"></script>
     <script type="text/javascript" src="js/controllers/documentController.js"></script>
+    <script type="text/javascript" src="js/controllers/registerController.js"></script>
+    <script type="text/javascript" src="js/controllers/collectionController.js"></script>
+    <script type="text/javascript" src="js/controllers/friendController.js"></script>
 </head>
 <body ng-controller="mainController">
 <div id="fb-root"></div>
