--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <link rel="stylesheet" type="text/css" href="lib/medium-editor/css/themes/default.css">
     <link rel="stylesheet" type="text/css" href="css/lib/datetimepicker.css">
     <!-- socket.io -->
-    <script type="text/javascript" src="http://localhost:9000/socket.io/socket.io.js"></script>
+    <script type="text/javascript" src="http://dev.app.topica.vn:9000/socket.io/socket.io.js"></script>
     <!-- lib -->
     <script type="text/javascript" src="lib/jquery-1.11.1.min.js"></script>
 	<script type="text/javascript" src="lib/angular.min.js"></script>
