--- a/main.html
+++ b/main.html
@@ -61,7 +61,7 @@
 <div id="fb-root"></div>
 <div ng-view id="view"></div>
 
-// <script>
+<script>
 // window.fbAsyncInit = function() {
 //     FB.init({
 //         appId   : '1424702867767076',
@@ -77,6 +77,6 @@
 //     e.async = true;
 //     document.getElementById('fb-root').appendChild(e);
 // }());
-// </script>
+</script>
 </body>
 </html>
