--- a/main.html
+++ b/main.html
@@ -14,9 +14,9 @@
     <link rel="stylesheet" type="text/css" href="lib/medium-editor/css/medium-editor.css">
     <link rel="stylesheet" type="text/css" href="lib/medium-editor/css/themes/default.css">
     <link rel="stylesheet" type="text/css" href="css/lib/datetimepicker.css">
-    <link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css">
+    <!-- <link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css"> -->
     <!-- Optional theme -->
-    <link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap-theme.min.css">
+    <!-- <link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap-theme.min.css"> -->
     <!-- socket.io -->
     <script type="text/javascript" src="http://dev.app.topica.vn:9000/socket.io/socket.io.js"></script>
     <!-- lib -->
